# teknfoestnlp_ellitoken

./: .gitignore  README.md  project structure and poetry.md  pyproject.toml
voice_agent_network/: .gitignore  pyproject.toml
voice_agent_network/config/: routes.yaml  settings.yaml
voice_agent_network/docs/: architecture.md  usage_guide.md
voice_agent_network/scripts/: run_server.py
voice_agent_network/src/agentic_network/: __init__.py  agent_graph.py  graph_builder.py
voice_agent_network/src/agentic_network/agents/: __init__.py  appointment_agent.py  cluster_agent.py  diagnosis_agent.py  out_of_topic_agent.py  small_talk_agent.py  topic_manager_agent.py  triage_agent.py
voice_agent_network/src/agentic_network/core/: __init__.py  agent_state.py  context.py  graph_routes.py  intent_classifier.py  tool_parser.py  topic_manager.py  topic_manager_util.py
voice_agent_network/src/agentic_network/routing/: __init__.py  cluster_agent_condition.py  tools_condition.py  topic_manager_condition.py
voice_agent_network/src/input_output/: audio_io.py  phone_interface.py
voice_agent_network/src/llm/: __init__.py  llm_adapter.py
voice_agent_network/src/llm/core/: __init__.py  devices.py  gemma_adapter.py  gemma_based_model_adapter.py  llm_adapter.py  llm_client.py  llm_singletons.py
voice_agent_network/src/output_generator/: action_executor.py  output_formatter.py  question_router.py
voice_agent_network/src/stt/: __init__.py  base_stt.py  file_stt.py  mic_stt.py  phone_stt.py  recognizer.py  utils.py
voice_agent_network/src/tts/: __init__.py  run_tts.py  synthesizer.py  utils.py
voice_agent_network/tests/: Gemma_Test.py  MedGemma_Test.py  gemma_adapter_test.py  gemma_test.py  graph_builder_test.py  medgemma_adapter_test.py  medgemma_test.py  test_agents.py  test_stt.py  test_tts.py
voice_agent_network/tests/topic_manager_test/: topic_manager_test.py
voice_agent_network/tests/trial_of_anything/: Gemini.py  appointment_agent_trial.py  diagnosis_agent_trial.py  topic_manager_agent_trial.py
(+98 files in other folders)
