[project]
name = "voice_agent_network"
version = "0.1.0"
description = ""
authors = [
    {name = "Emre Tahtalı", email = "emreetahtali@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "voice_agent_network", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
