[project]
name = "voice_agent_network"
version = "0.1.0"
description = ""
authors = [
    {name = "Emre Tahtalı", email = "emreetahtali@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "transformers (>=4.55.0,<5.0.0)",
    "llama-cpp-python (>=0.3.15,<0.4.0)",
    "accelerate (>=1.10.0,<2.0.0)",
    "transformers (>=4.55.0,<5.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "twilio (>=9.7.0,<10.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "response (>=0.5.0,<0.6.0)",
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "voice_agent_network", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
